--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -12,28 +12,28 @@
 <h1 class="text-primary text-2xl font-bold">EpicTask</h1>
 
 <main class="grid place-items-center">
-   <form class="w-full max-w-md" method="POST">
+   <form class="w-full max-w-md" method="POST" th:object="${task}">
        <fieldset class="fieldset">
-           <legend class="fieldset-legend">Título</legend>
-           <input name="title" type="text" class="input" placeholder="título da tarefa" />
-           <p class="label">Campo obrigatório</p>
+           <legend class="fieldset-legend" th:text="#{title}"></legend>
+           <input th:field="*{title}" th:errorclass="input-error" type="text" class="input" />
+           <p class="label text-error" th:errors="*{title}"></p>
        </fieldset>
 
        <fieldset class="fieldset">
-           <legend class="fieldset-legend">Descrição</legend>
-           <textarea name="description" class="textarea" placeholder="descrição da tarefa"></textarea>
-           <p class="label">Pelo menos 10 caracteres</p>
+           <legend class="fieldset-legend" th:text="#{description}"></legend>
+           <textarea th:field="*{description}" th:errorclass="textarea-error" class="textarea" ></textarea>
+           <p class="label text-error" th:errors="*{description}"></p>
        </fieldset>
 
        <fieldset class="fieldset">
-           <legend class="fieldset-legend">Pontos</legend>
-           <input name="score" id="range-score" type="range" min="0" max="100" value="40" class="range range-primary" />
-           <p id="label-score" class="label">40 pts</p>
+           <legend class="fieldset-legend" th:text="#{score}"></legend>
+           <input th:field="*{score}" id="range-score" type="range" min="1" max="100" class="range range-primary" />
+           <p id="label-score" class="label" th:text="${task.score + ' pts'}"></p>
        </fieldset>
 
        <div>
-           <a href="/task" class="btn btn-neutral">Cancelar</a>
-           <button class="btn btn-primary">Salvar</button>
+           <a href="/task" class="btn btn-neutral" th:text="#{cancel}"></a>
+           <button class="btn btn-primary" th:text="#{save}"></button>
        </div>
 
    </form>
