--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,25 @@
                 </details>
             </li>
         </ul>
+        <div class="dropdown dropdown-end">
+            <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+                <div class="w-10 rounded-full">
+                    <img
+                            alt="Avatar do usuário"
+                            th:src="${avatar}" />
+                </div>
+            </div>
+            <ul
+                    tabindex="0"
+                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                <li>
+                    <a class="justify-between" th:text="${user.attributes.email}"></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </div>
+
 </nav>
 
 <a href="/task/form" class="btn btn-primary m-4" th:text="#{task.new}"></a>
